# pymids

./: .cz.toml  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: tests.yml
mids/: cli.py  cli_utils.py  io.py  lib.py  matchers.py  model.py
sssom/: v0.1_biology.sssom.tsv  v0.1_biology.sssom.yml
tests/: test_io.py  test_lib.py  test_matchers.py  test_model.py
